--- a/index.html
+++ b/index.html
@@ -29,7 +29,26 @@
             <nav class="navbar navbar-expand-md" data-aos="fade-down">
                 <div class="container-fluid">
                     <a class="logo-container d-flex" href="#top-section">
-                        <img src="images/Box.png" class="logo-image" alt="">
+                        <svg class="logo-image" xmlns="http://www.w3.org/2000/svg" width="36" height="37" viewBox="0 0 36 37" fill="none">
+                            <path d="M16.1659 1.45937C16.727 1.1581 17.3582 1 18 1C18.6418 1 19.273 1.1581 19.8341 1.45937L34.0291 9.08253C34.3234 9.24076 34.5686 9.47219 34.7393 9.75284C34.91 10.0335 35 10.3532 35 10.6787V25.7187C34.9998 26.37 34.8195 27.0095 34.4778 27.5708C34.136 28.1321 33.6453 28.5949 33.0563 28.9111L19.8341 36.0156C19.273 36.3169 18.6418 36.475 18 36.475C17.3582 36.475 16.727 36.3169 16.1659 36.0156L2.94367 28.9111C2.355 28.595 1.86442 28.1326 1.52268 27.5716C1.18095 27.0106 1.0005 26.3716 1 25.7205V10.6787C0.999986 10.3532 1.08999 10.0335 1.2607 9.75284C1.4314 9.47219 1.67659 9.24076 1.97089 9.08253L16.1678 1.45937H16.1659Z" fill="url(#paint0_linear_446_46)"/>
+                            <path d="M18 18.7366V37V18.7366Z" fill="url(#paint1_linear_446_46)"/>
+                            <path d="M6.66667 19.3356L12.3333 22.3893L6.66667 19.3356Z" fill="url(#paint2_linear_446_46)"/>
+                            <path d="M16.1659 1.45937L15.6928 0.578348C15.289 0.795176 15.0843 1.25877 15.1961 1.70327C15.3079 2.14778 15.7075 2.45937 16.1659 2.45937V1.45937ZM18 1V0V1ZM19.8341 1.45937L20.3072 0.578377L20.3072 0.578348L19.8341 1.45937ZM34.0291 9.08253L34.5027 8.20177L34.5022 8.20153L34.0291 9.08253ZM35 10.6787L34 10.6787V10.6787H35ZM35 25.7187L36 25.7189V25.7187H35ZM33.0563 28.9111L32.5833 28.0301L32.583 28.0302L33.0563 28.9111ZM19.8341 36.0156L20.3072 36.8966L20.3074 36.8965L19.8341 36.0156ZM16.1659 36.0156L15.6926 36.8965L15.6928 36.8966L16.1659 36.0156ZM2.94367 28.9111L3.41698 28.0302L3.41673 28.0301L2.94367 28.9111ZM1 25.7205H-2.38419e-07L2.98023e-07 25.7213L1 25.7205ZM1 10.6787H2V10.6787L1 10.6787ZM1.97089 9.08253L1.49782 8.2015L1.49733 8.20177L1.97089 9.08253ZM16.1678 1.45937L16.6409 2.3404C17.0447 2.12357 17.2494 1.65997 17.1376 1.21547C17.0258 0.770971 16.6261 0.459374 16.1678 0.459374V1.45937ZM9.02679 13.2898C8.54025 13.5511 8.3577 14.1574 8.61905 14.6439C8.8804 15.1305 9.48667 15.313 9.97321 15.0517L9.02679 13.2898ZM26.9732 5.91995C27.4597 5.65861 27.6423 5.05233 27.3809 4.56579C27.1196 4.07926 26.5133 3.89671 26.0268 4.15806L26.9732 5.91995ZM7.14105 18.4553C6.65486 18.1933 6.04834 18.375 5.78635 18.8612C5.52435 19.3474 5.7061 19.9539 6.19228 20.2159L7.14105 18.4553ZM11.8589 23.2696C12.3451 23.5316 12.9517 23.3498 13.2137 22.8636C13.4756 22.3775 13.2939 21.7709 12.8077 21.5089L11.8589 23.2696ZM16.639 2.3404C17.0534 2.11785 17.522 2 18 2V0C17.1944 0 16.4005 0.198339 15.6928 0.578348L16.639 2.3404ZM18 2C18.478 2 18.9466 2.11785 19.361 2.3404L20.3072 0.578348C19.5995 0.19834 18.8056 0 18 0V2ZM19.361 2.34037L33.556 9.96352L34.5022 8.20153L20.3072 0.578377L19.361 2.34037ZM33.5555 9.96329C33.6959 10.0387 33.8084 10.1467 33.8849 10.2725L35.5937 9.23318C35.3288 8.79768 34.951 8.4428 34.5027 8.20177L33.5555 9.96329ZM33.8849 10.2725C33.9613 10.398 34 10.5382 34 10.6787L36 10.6788C36 10.1682 35.8587 9.66896 35.5937 9.23318L33.8849 10.2725ZM34 10.6787V25.7187H36V10.6787H34ZM34 25.7184C33.9999 26.1847 33.8709 26.6446 33.6236 27.0508L35.3319 28.0909C35.7681 27.3744 35.9998 26.5554 36 25.7189L34 25.7184ZM33.6236 27.0508C33.3762 27.4573 33.0181 27.7966 32.5833 28.0301L33.5294 29.7922C34.2724 29.3932 34.8959 28.807 35.3319 28.0909L33.6236 27.0508ZM32.583 28.0302L19.3608 35.1347L20.3074 36.8965L33.5296 29.792L32.583 28.0302ZM19.361 35.1346C18.9466 35.3571 18.4781 35.475 18 35.475V37.475C18.8056 37.475 19.5995 37.2766 20.3072 36.8966L19.361 35.1346ZM18 35.475C17.5219 35.475 17.0534 35.3571 16.639 35.1346L15.6928 36.8966C16.4005 37.2766 17.1944 37.475 18 37.475V35.475ZM16.6392 35.1347L3.41698 28.0302L2.47035 29.792L15.6926 36.8965L16.6392 35.1347ZM3.41673 28.0301C2.98207 27.7967 2.62416 27.4576 2.3767 27.0514L0.668669 28.0919C1.10467 28.8076 1.72794 29.3934 2.4706 29.7922L3.41673 28.0301ZM2.3767 27.0514C2.12941 26.6454 2.00035 26.1858 2 25.7197L2.98023e-07 25.7213C0.000637412 26.5573 0.23249 27.3759 0.668669 28.0919L2.3767 27.0514ZM2 25.7205V10.6787H0V25.7205H2ZM2 10.6787C1.99999 10.5381 2.03872 10.398 2.11507 10.2725L0.406324 9.23318C0.141259 9.66897 -2.16961e-05 10.1682 0 10.6788L2 10.6787ZM2.11507 10.2725C2.19159 10.1467 2.30414 10.0387 2.44445 9.96329L1.49733 8.20177C1.04904 8.4428 0.67121 8.79768 0.406324 9.23318L2.11507 10.2725ZM2.44396 9.96355L16.6409 2.3404L15.6947 0.578351L1.49782 8.2015L2.44396 9.96355ZM16.1678 0.459374H16.1659V2.45937H16.1678V0.459374ZM0.52679 10.4858L17.5268 19.6175L18.4732 17.8556L1.47321 8.72391L0.52679 10.4858ZM18.4732 19.6175L35.4732 10.4858L34.5268 8.72391L17.5268 17.8556L18.4732 19.6175ZM17 18.7366V37H19V18.7366H17ZM9.97321 15.0517L26.9732 5.91995L26.0268 4.15806L9.02679 13.2898L9.97321 15.0517ZM6.19228 20.2159L11.8589 23.2696L12.8077 21.5089L7.14105 18.4553L6.19228 20.2159Z" fill="#21325E"/>
+                            <defs>
+                                <linearGradient id="paint0_linear_446_46" x1="18" y1="1" x2="18" y2="37" gradientUnits="userSpaceOnUse">
+                                    <stop stop-color="#F0C760"/>
+                                    <stop offset="1" stop-color="#FBD64E"/>
+                                </linearGradient>
+                                <linearGradient id="paint1_linear_446_46" x1="18" y1="1" x2="18" y2="37" gradientUnits="userSpaceOnUse">
+                                    <stop stop-color="#F0C760"/>
+                                    <stop offset="1" stop-color="#FBD64E"/>
+                                </linearGradient>
+                                <linearGradient id="paint2_linear_446_46" x1="18" y1="1" x2="18" y2="37" gradientUnits="userSpaceOnUse">
+                                    <stop stop-color="#F0C760"/>
+                                    <stop offset="1" stop-color="#FBD64E"/>
+                                </linearGradient>
+                            </defs>
+                        </svg>
                         <div class="logo-text navbar-collapse collapse">
                             Быстрый<br/>грузовой
                         </div>
@@ -261,7 +280,15 @@
                 <div class="row gx-4 gy-4 justify-content-center">
                     <div class="col-md-6 justify-content-center d-flex">
                         <div class="partners-card-with-icon d-flex align-items-center">
-                            <img src="images/store_new.png" alt="">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="51" height="37" viewBox="0 0 51 37" fill="none">
+                                <path d="M47.7222 0.186523H3.27778V4.76986H47.7222V0.186523ZM50.5 23.1032V18.5199L47.7222 7.06152H3.27778L0.5 18.5199V23.1032H3.27778V36.8532H31.0556V23.1032H42.1667V36.8532H47.7222V23.1032H50.5ZM25.5 32.2699H8.83333V23.1032H25.5V32.2699Z" fill="url(#paint0_linear_243_151)"/>
+                                <defs>
+                                    <linearGradient id="paint0_linear_243_151" x1="25.5" y1="0.186523" x2="25.5" y2="36.8532" gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#3E497A"/>
+                                        <stop offset="1" stop-color="#5563A2"/>
+                                    </linearGradient>
+                                </defs>
+                            </svg>
                             <div class="partners-card-text text-start">
                                 Если вам нужна доставка<br>
                                 для ваших клиентов
@@ -270,7 +297,30 @@
                     </div>
                     <div class="col-md-6 justify-content-center d-flex">
                         <div class="partners-card-with-icon d-flex align-items-center">
-                            <img src="images/truck_new.png" alt="">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="51" height="37" viewBox="0 0 51 37" fill="none">
+                                <path d="M0.166626 33.0481V27.197H50.1666V33.0481H0.166626Z" fill="url(#paint0_linear_172_162)"/>
+                                <path d="M46.4353 33.0481C46.4353 35.2024 44.7647 36.9488 42.7039 36.9488C40.6432 36.9488 38.9726 35.2024 38.9726 33.0481C38.9726 30.8938 40.6432 29.1474 42.7039 29.1474C44.7647 29.1474 46.4353 30.8938 46.4353 33.0481Z" fill="url(#paint1_linear_172_162)"/>
+                                <path d="M11.3607 33.0481C11.3607 35.2024 9.69008 36.9488 7.62931 36.9488C5.56855 36.9488 3.89797 35.2024 3.89797 33.0481C3.89797 30.8938 5.56855 29.1474 7.62931 29.1474C9.69008 29.1474 11.3607 30.8938 11.3607 33.0481Z" fill="url(#paint2_linear_172_162)"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M38.5995 0.282104H0.166626V24.4665H50.1666V18.2254L43.8233 10.814H38.5995V0.282104ZM43.4502 12.7644H38.5995V16.6651H46.4353L43.4502 12.7644Z" fill="url(#paint3_linear_172_162)"/>
+                                <defs>
+                                    <linearGradient id="paint0_linear_172_162" x1="25.1666" y1="0.282104" x2="25.1666" y2="36.9488" gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#3E497A"/>
+                                        <stop offset="1" stop-color="#5563A2"/>
+                                    </linearGradient>
+                                    <linearGradient id="paint1_linear_172_162" x1="25.1666" y1="0.282104" x2="25.1666" y2="36.9488" gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#3E497A"/>
+                                        <stop offset="1" stop-color="#5563A2"/>
+                                    </linearGradient>
+                                    <linearGradient id="paint2_linear_172_162" x1="25.1666" y1="0.282104" x2="25.1666" y2="36.9488" gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#3E497A"/>
+                                        <stop offset="1" stop-color="#5563A2"/>
+                                    </linearGradient>
+                                    <linearGradient id="paint3_linear_172_162" x1="25.1666" y1="0.282104" x2="25.1666" y2="36.9488" gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#3E497A"/>
+                                        <stop offset="1" stop-color="#5563A2"/>
+                                    </linearGradient>
+                                </defs>
+                            </svg>
                             <div class="partners-card-text text-start">
                                 Если вам нужны клиенты<br>
                                 для грузоперевозок
@@ -303,7 +353,26 @@
         <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
                 <a class="logo-container d-flex" href="#top-section">
-                    <img src="images/Box.png" class="logo-image" alt="">
+                    <svg class="logo-image" xmlns="http://www.w3.org/2000/svg" width="36" height="37" viewBox="0 0 36 37" fill="none">
+                        <path d="M16.1659 1.45937C16.727 1.1581 17.3582 1 18 1C18.6418 1 19.273 1.1581 19.8341 1.45937L34.0291 9.08253C34.3234 9.24076 34.5686 9.47219 34.7393 9.75284C34.91 10.0335 35 10.3532 35 10.6787V25.7187C34.9998 26.37 34.8195 27.0095 34.4778 27.5708C34.136 28.1321 33.6453 28.5949 33.0563 28.9111L19.8341 36.0156C19.273 36.3169 18.6418 36.475 18 36.475C17.3582 36.475 16.727 36.3169 16.1659 36.0156L2.94367 28.9111C2.355 28.595 1.86442 28.1326 1.52268 27.5716C1.18095 27.0106 1.0005 26.3716 1 25.7205V10.6787C0.999986 10.3532 1.08999 10.0335 1.2607 9.75284C1.4314 9.47219 1.67659 9.24076 1.97089 9.08253L16.1678 1.45937H16.1659Z" fill="url(#paint0_linear_446_46)"/>
+                        <path d="M18 18.7366V37V18.7366Z" fill="url(#paint1_linear_446_46)"/>
+                        <path d="M6.66667 19.3356L12.3333 22.3893L6.66667 19.3356Z" fill="url(#paint2_linear_446_46)"/>
+                        <path d="M16.1659 1.45937L15.6928 0.578348C15.289 0.795176 15.0843 1.25877 15.1961 1.70327C15.3079 2.14778 15.7075 2.45937 16.1659 2.45937V1.45937ZM18 1V0V1ZM19.8341 1.45937L20.3072 0.578377L20.3072 0.578348L19.8341 1.45937ZM34.0291 9.08253L34.5027 8.20177L34.5022 8.20153L34.0291 9.08253ZM35 10.6787L34 10.6787V10.6787H35ZM35 25.7187L36 25.7189V25.7187H35ZM33.0563 28.9111L32.5833 28.0301L32.583 28.0302L33.0563 28.9111ZM19.8341 36.0156L20.3072 36.8966L20.3074 36.8965L19.8341 36.0156ZM16.1659 36.0156L15.6926 36.8965L15.6928 36.8966L16.1659 36.0156ZM2.94367 28.9111L3.41698 28.0302L3.41673 28.0301L2.94367 28.9111ZM1 25.7205H-2.38419e-07L2.98023e-07 25.7213L1 25.7205ZM1 10.6787H2V10.6787L1 10.6787ZM1.97089 9.08253L1.49782 8.2015L1.49733 8.20177L1.97089 9.08253ZM16.1678 1.45937L16.6409 2.3404C17.0447 2.12357 17.2494 1.65997 17.1376 1.21547C17.0258 0.770971 16.6261 0.459374 16.1678 0.459374V1.45937ZM9.02679 13.2898C8.54025 13.5511 8.3577 14.1574 8.61905 14.6439C8.8804 15.1305 9.48667 15.313 9.97321 15.0517L9.02679 13.2898ZM26.9732 5.91995C27.4597 5.65861 27.6423 5.05233 27.3809 4.56579C27.1196 4.07926 26.5133 3.89671 26.0268 4.15806L26.9732 5.91995ZM7.14105 18.4553C6.65486 18.1933 6.04834 18.375 5.78635 18.8612C5.52435 19.3474 5.7061 19.9539 6.19228 20.2159L7.14105 18.4553ZM11.8589 23.2696C12.3451 23.5316 12.9517 23.3498 13.2137 22.8636C13.4756 22.3775 13.2939 21.7709 12.8077 21.5089L11.8589 23.2696ZM16.639 2.3404C17.0534 2.11785 17.522 2 18 2V0C17.1944 0 16.4005 0.198339 15.6928 0.578348L16.639 2.3404ZM18 2C18.478 2 18.9466 2.11785 19.361 2.3404L20.3072 0.578348C19.5995 0.19834 18.8056 0 18 0V2ZM19.361 2.34037L33.556 9.96352L34.5022 8.20153L20.3072 0.578377L19.361 2.34037ZM33.5555 9.96329C33.6959 10.0387 33.8084 10.1467 33.8849 10.2725L35.5937 9.23318C35.3288 8.79768 34.951 8.4428 34.5027 8.20177L33.5555 9.96329ZM33.8849 10.2725C33.9613 10.398 34 10.5382 34 10.6787L36 10.6788C36 10.1682 35.8587 9.66896 35.5937 9.23318L33.8849 10.2725ZM34 10.6787V25.7187H36V10.6787H34ZM34 25.7184C33.9999 26.1847 33.8709 26.6446 33.6236 27.0508L35.3319 28.0909C35.7681 27.3744 35.9998 26.5554 36 25.7189L34 25.7184ZM33.6236 27.0508C33.3762 27.4573 33.0181 27.7966 32.5833 28.0301L33.5294 29.7922C34.2724 29.3932 34.8959 28.807 35.3319 28.0909L33.6236 27.0508ZM32.583 28.0302L19.3608 35.1347L20.3074 36.8965L33.5296 29.792L32.583 28.0302ZM19.361 35.1346C18.9466 35.3571 18.4781 35.475 18 35.475V37.475C18.8056 37.475 19.5995 37.2766 20.3072 36.8966L19.361 35.1346ZM18 35.475C17.5219 35.475 17.0534 35.3571 16.639 35.1346L15.6928 36.8966C16.4005 37.2766 17.1944 37.475 18 37.475V35.475ZM16.6392 35.1347L3.41698 28.0302L2.47035 29.792L15.6926 36.8965L16.6392 35.1347ZM3.41673 28.0301C2.98207 27.7967 2.62416 27.4576 2.3767 27.0514L0.668669 28.0919C1.10467 28.8076 1.72794 29.3934 2.4706 29.7922L3.41673 28.0301ZM2.3767 27.0514C2.12941 26.6454 2.00035 26.1858 2 25.7197L2.98023e-07 25.7213C0.000637412 26.5573 0.23249 27.3759 0.668669 28.0919L2.3767 27.0514ZM2 25.7205V10.6787H0V25.7205H2ZM2 10.6787C1.99999 10.5381 2.03872 10.398 2.11507 10.2725L0.406324 9.23318C0.141259 9.66897 -2.16961e-05 10.1682 0 10.6788L2 10.6787ZM2.11507 10.2725C2.19159 10.1467 2.30414 10.0387 2.44445 9.96329L1.49733 8.20177C1.04904 8.4428 0.67121 8.79768 0.406324 9.23318L2.11507 10.2725ZM2.44396 9.96355L16.6409 2.3404L15.6947 0.578351L1.49782 8.2015L2.44396 9.96355ZM16.1678 0.459374H16.1659V2.45937H16.1678V0.459374ZM0.52679 10.4858L17.5268 19.6175L18.4732 17.8556L1.47321 8.72391L0.52679 10.4858ZM18.4732 19.6175L35.4732 10.4858L34.5268 8.72391L17.5268 17.8556L18.4732 19.6175ZM17 18.7366V37H19V18.7366H17ZM9.97321 15.0517L26.9732 5.91995L26.0268 4.15806L9.02679 13.2898L9.97321 15.0517ZM6.19228 20.2159L11.8589 23.2696L12.8077 21.5089L7.14105 18.4553L6.19228 20.2159Z" fill="#21325E"/>
+                        <defs>
+                            <linearGradient id="paint0_linear_446_46" x1="18" y1="1" x2="18" y2="37" gradientUnits="userSpaceOnUse">
+                                <stop stop-color="#F0C760"/>
+                                <stop offset="1" stop-color="#FBD64E"/>
+                            </linearGradient>
+                            <linearGradient id="paint1_linear_446_46" x1="18" y1="1" x2="18" y2="37" gradientUnits="userSpaceOnUse">
+                                <stop stop-color="#F0C760"/>
+                                <stop offset="1" stop-color="#FBD64E"/>
+                            </linearGradient>
+                            <linearGradient id="paint2_linear_446_46" x1="18" y1="1" x2="18" y2="37" gradientUnits="userSpaceOnUse">
+                                <stop stop-color="#F0C760"/>
+                                <stop offset="1" stop-color="#FBD64E"/>
+                            </linearGradient>
+                        </defs>
+                    </svg>
                     <div class="logo-text navbar-collapse collapse">
                         Быстрый<br/>грузовой
                     </div>
